@@ -3,6 +3,7 @@
     "class": "solr.MultiAuthPlugin",
     "schemes": [{
       "scheme": "basic",
+      "realm": "basicRealm",
       "blockUnknown": true,
       "class": "solr.BasicAuthPlugin",
       "credentials": {
@@ -11,6 +12,11 @@
       "forwardCredentials": false
     },{
       "scheme": "mock",
+      "realm": "mockRealm",
+      "class": "org.apache.solr.security.MultiAuthPluginTest$MockAuthPluginForTesting",
+      "blockUnknown": true
+    },{
+      "scheme": "mockNoRealm",
       "class": "org.apache.solr.security.MultiAuthPluginTest$MockAuthPluginForTesting",
       "blockUnknown": true
     }]
